k8s-local/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: immune-master
  labels:
    istio-injection: enabled   # Auto-inject Envoy sidecar at all pods
